--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -1,25 +1,24 @@
-{% extends "account/base_manage.html" %}
-{% load allauth i18n %}
-{% block head_title %}
-    {% trans "Sign Out" %}
-{% endblock head_title %}
+{% extends "base.html" %}
+{% load i18n %}
+
+{% block title %}Logout – Strum & Strings{% endblock %}
+
+{% block main_class %}container py-5 my-5{% endblock %}
+
 {% block content %}
-    {% element h1 %}
-        {% trans "Sign Out" %}
-    {% endelement %}
-    {% element p %}
-        {% trans 'Are you sure you want to sign out?' %}
-    {% endelement %}
-    {% url 'account_logout' as action_url %}
-    {% element form method="post" action=action_url no_visible_fields=True %}
-        {% slot body %}
-            {% csrf_token %}
-            {{ redirect_field }}
-        {% endslot %}
-        {% slot actions %}
-            {% element button type="submit" %}
-                {% trans 'Sign Out' %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
-{% endblock content %}
+<div class="row justify-content-center">
+  <div class="col-md-6 col-lg-5 text-center">
+    <h2 class="mb-4">{% trans "Logout" %}</h2>
+    <p>{% trans "Are you sure you want to log out?" %}</p>
+
+    <form method="post" action="{% url 'account_logout' %}">
+      {% csrf_token %}
+      <button class="btn btn-danger mt-3" type="submit">{% trans "Log Out" %}</button>
+    </form>
+
+    <p class="mt-3">
+      <a href="{% url 'home' %}">{% trans "Cancel and return to homepage" %}</a>
+    </p>
+  </div>
+</div>
+{% endblock %}
