--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -1,32 +1,29 @@
-{% extends "account/base_entrance.html" %}
-{% load i18n allauth account %}
-{% block head_title %}
-    {% trans "Password Reset" %}
-{% endblock head_title %}
+{% extends "base.html" %}
+{% load i18n %}
+{% load crispy_forms_tags %}
+
+{% block title %}Reset Your Password – Strum & Strings{% endblock %}
+
+{% block main_class %}container py-5{% endblock %}
+
 {% block content %}
-    {% element h1 %}
-        {% trans "Password Reset" %}
-    {% endelement %}
-    {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    {% element p %}
-        {% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}
-    {% endelement %}
-    {% url 'account_reset_password' as reset_url %}
-    {% element form form=form method="post" action=reset_url %}
-        {% slot body %}
-            {% csrf_token %}
-            {% element fields form=form %}
-            {% endelement %}
-        {% endslot %}
-        {% slot actions %}
-            {% element button type="submit" %}
-                {% trans 'Reset My Password' %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
-    {% element p %}
-        {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
-    {% endelement %}
-{% endblock content %}
+<div class="row justify-content-center">
+  <div class="col-md-6 col-lg-5">
+    <h2 class="mb-4">{% trans "Reset Your Password" %}</h2>
+    <p>{% trans "Enter your email address below and we’ll send you a link to reset your password." %}</p>
+
+    <form method="post" action="{% url 'account_reset_password' %}">
+      {% csrf_token %}
+      {{ form.as_p }}
+
+      <button class="btn btn-primary mt-3" type="submit">
+        {% trans "Send Password Reset Email" %}
+      </button>
+    </form>
+
+    <p class="mt-3">
+      <a href="{% url 'account_login' %}">{% trans "Back to Login" %}</a>
+    </p>
+  </div>
+</div>
+{% endblock %}
