--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -1,18 +1,21 @@
-{% extends "account/base_entrance.html" %}
+{% extends "base.html" %}
 {% load i18n %}
-{% load allauth %}
-{% load account %}
-{% block head_title %}
-    {% trans "Password Reset" %}
-{% endblock head_title %}
+{% load crispy_forms_tags %}
+
+{% block title %}Email Sent – Strum & Strings{% endblock %}
+
+{% block main_class %}container py-5{% endblock %}
+
 {% block content %}
-    {% element h1 %}
-        {% trans "Password Reset" %}
-    {% endelement %}
-    {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    {% element p %}
-        {% blocktrans %}We have sent you an email. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}
-    {% endelement %}
-{% endblock content %}
+<div class="row justify-content-center">
+  <div class="col-md-6 col-lg-5 text-center">
+    <h2 class="mb-4">{% trans "Check Your Inbox" %}</h2>
+    <p>{% trans "We’ve sent you an email with instructions to reset your password." %}</p>
+    <p>{% trans "If you don’t receive it shortly, check your spam folder or try again." %}</p>
+
+    <a class="btn btn-outline-primary mt-3" href="{% url 'account_login' %}">
+      {% trans "Return to Login" %}
+    </a>
+  </div>
+</div>
+{% endblock %}
