--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -1,35 +1,37 @@
-{% extends "account/base_entrance.html" %}
+{% extends "base.html" %}
 {% load i18n %}
-{% load allauth %}
-{% block head_title %}
-    {% trans "Change Password" %}
-{% endblock head_title %}
+{% load crispy_forms_tags %}
+
+{% block title %}Reset Your Password – Strum & Strings{% endblock %}
+
+{% block main_class %}container py-5{% endblock %}
+
 {% block content %}
-    {% element h1 %}
-        {% if token_fail %}
-            {% trans "Bad Token" %}
-        {% else %}
-            {% trans "Change Password" %}
-        {% endif %}
-    {% endelement %}
+<div class="row justify-content-center">
+  <div class="col-md-6 col-lg-5">
+    <h2 class="mb-4 text-center">{% trans "Set New Password" %}</h2>
+
     {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        {% element p %}
-            {% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}
-        {% endelement %}
+      <div class="alert alert-danger text-center" role="alert">
+        {% trans "The reset link is invalid, possibly because it has already been used. Please request a new password reset." %}
+      </div>
+      <div class="text-center">
+        <a href="{% url 'account_reset_password' %}" class="btn btn-outline-primary">
+          {% trans "Request New Link" %}
+        </a>
+      </div>
     {% else %}
-        {% element form method="post" action=action_url %}
-            {% slot body %}
-                {% csrf_token %}
-                {{ redirect_field }}
-                {% element fields form=form %}
-                {% endelement %}
-            {% endslot %}
-            {% slot actions %}
-                {% element button type="submit" name="action" %}
-                    {% trans 'Change Password' %}
-                {% endelement %}
-            {% endslot %}
-        {% endelement %}
+      <form method="post" action="{{ action_url }}">
+        {% csrf_token %}
+        {{ form.as_p }}
+
+        <div class="text-center">
+          <button class="btn btn-primary mt-3" type="submit">
+            {% trans "Change Password" %}
+          </button>
+        </div>
+      </form>
     {% endif %}
-{% endblock content %}
+  </div>
+</div>
+{% endblock %}
