--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -1,14 +1,19 @@
-{% extends "account/base_entrance.html" %}
+{% extends "base.html" %}
 {% load i18n %}
-{% load allauth %}
-{% block head_title %}
-    {% trans "Change Password" %}
-{% endblock head_title %}
+{% load crispy_forms_tags %}
+
+{% block title %}Password Reset Successful – Strum & Strings{% endblock %}
+
+{% block main_class %}container py-5{% endblock %}
+
 {% block content %}
-    {% element h1 %}
-        {% trans "Change Password" %}
-    {% endelement %}
-    {% element p %}
-        {% trans 'Your password is now changed.' %}
-    {% endelement %}
-{% endblock content %}
+<div class="row justify-content-center">
+  <div class="col-md-6 col-lg-5 text-center">
+    <h2 class="mb-4">{% trans "Password Changed" %}</h2>
+    <p class="lead">{% trans "Your password has been successfully changed. You can now log in with your new password." %}</p>
+    <a href="{% url 'account_login' %}" class="btn btn-success mt-3">
+      {% trans "Log In" %}
+    </a>
+  </div>
+</div>
+{% endblock %}
