--- a/templates/base.html
+++ b/templates/base.html
@@ -87,9 +87,21 @@
                   >Categories</a
                 >
               </li>
+              {% if user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link" href="#">Account</a>
+                <a class="nav-link" href="#">Welcome, {{ user.first_name|default:user.username }}</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
+              </li>
+              {% endif %}
               <li class="nav-item">
                 <a class="nav-link" href="#">
                   Cart
